# OpenModes

./: environment.yml  justfile  meson.build  pyproject.toml  setup.py
.github/workflows/: test.yml
build_meson/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  core-f2pywrappers2.f90  coremodule.c  dunavantmodule.c  meson-python-native-file.ini
build_meson/core.cpython-311-x86_64-linux-gnu.so.p/: constants.mod  core_for.mod  depscan.dd  vectors.mod
build_meson/dunavant.cpython-311-x86_64-linux-gnu.so.p/: depscan.dd
build_meson/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-compilers.json  intro-dependencies.json  intro-install_plan.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  meson-info.json
build_meson/meson-logs/: meson-log.txt
build_meson/meson-private/: cmd_line.txt  coredata.dat.prev  python-3.11-installed.json
doc/: Makefile  conf.py  index.rst  install.rst
doc/_static/: custom.css
doc/_themes/custom-agogo/: theme.conf
doc/_themes/custom-agogo/static/: agogo.css_t
examples/: README.rst  _plot_dielectric_disk.py  plot_3D.py  plot_accuracy.py  plot_calculating_extinction.py  plot_coupled.py  plot_geometry.py  plot_scalar_modesl.py  plot_visualising_modes.py
examples/dev/: Index.py
examples/notebooks/: Calculating Extinction.ipynb
openmodes/: __init__.py  array.py  basis.py  constants.py  eig.py  helpers.py  impedance.py  integration.py  ipython.py  material.py  meson.build  model.py  modes.py  multipole.py  parts.py  simulation.py  sources.py  version.py  visualise.py
openmodes/geometry/: meson.build
openmodes/mesh/: __init__.py  freecad.py  gmsh.py  mesh.py  meson.build
openmodes/operator/: __init__.py  meson.build  operator.py  pec.py  penetrable.py  rwg.py  singularities.py
openmodes/src/: meson.build
openmodes/static/: meson.build
openmodes/templates/: meson.build
src/: rwg.f90
test/: helpers.py  run_geometry.py  test_array.py  test_basis.py  test_eig.py  test_helpers.py  test_horseshoe.py  test_mesh.py  test_multipoles.py  test_nonlinear_eig.py  test_parts.py  test_poles.py  test_sphere.py  test_vector.py  time_sphere.py
test/input/test_multipoles/: sphere.msh
test/reference/test_basis/: loop_star_basis_func.txt  loop_star_r.txt  rwg_basis_func.txt  rwg_r.txt
test/reference/test_horseshoe/: eigenvector_0.txt  eigenvector_1.txt  eigenvector_2.txt  surface_normals.txt  surface_r.txt
test/reference/test_multipoles/: pec_sphere_multipoles.pickle
