[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', "numpy >=1.22"]

[project]
name = 'openmodes'
version = '1.3.2'
description = 'An eigenmode solver for open electromagnetic resonators'
readme = 'README.md'
requires-python = ">=3.9"
license = { file = 'LICENSE.txt' }
authors = [{ name = 'David Powell', email = 'DavidAnthonyPowell@gmail.com' }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Utilities",
]
dependencies = [
    "numpy >= 1.22",
    "scipy >= 0.18.0",
    "matplotlib",
    "jinja2",
    "six",
    "ipywidgets",
    "meshio",
    "dill",
    "pyvista",
    "gmsh",
]

[tool.setuptools]
packages = ["openmodes"]


[project.optional-dependencies]
plot = ["mayavi"]
test = [
  "pytest",
  "pytest-cov",
  "pytest-datadir",
  "pytest-sugar",
  "pytest-xdist[psutil]",
  "coverage",
]
doc = [
  "sphinx",
  "sphinxawesome-theme",
  "sphinx-gallery",
  "memory_profiler",
]
all = ["openmodes[plot,test,doc]"]


[tool.pytest.ini_options]
addopts = "--cov=openmodes --cov-report html --cov-report term"