
python_sources = ['cross.geo', 'canonical_spiral.geo', 'SRR.geo', 
'cylinder_hole.geo', 'sphere.geo', 'single.geo', 'single-bent.geo', 
'circle.geo', 'solid_L.geo', 'rectangle.geo', 'horseshoe_rect.geo', 
'closed_ring.geo', 'isosceles.geo', 'torus.geo', 'box.geo', 
'cylinder_rounded.geo', 'ellipsoid.geo', 'asymmetric_ring.geo', 
'cylinder_hollow.geo', 'v_antenna.geo', 'circled_cross.geo', 
'elliptical_cylinder.geo']

py.install_sources(
  python_sources,
  pure: false,
  subdir: 'openmodes/geometry'
)
